src/component/Navbar/Navbar.css
/* Navbar */
.navbar {
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: var(--blue);
  padding: 0.75rem 1.5rem;
  position: sticky;
  top: 0;
  z-index: 100;
  flex-wrap: wrap;
}

.logo {
  font-weight: 900;
  font-size: 1.5rem;
  letter-spacing: 2px;
  user-select: none;
}
.logo:hover {
  cursor: pointer;
}

.nav-links {
  display: flex;
  gap: 1rem;
}

.nav-btn {
  background: transparent;
  border: 2px solid var(--text-light);
  color: var(--text-light);
  padding: 0.4rem 1rem;
  border-radius: 20px;
  cursor: pointer;
  font-weight: 600;
  transition: background-color 0.3s, color 0.3s;
}

.nav-btn:hover {
  background-color: var(--text-light);
  color: var(--blue);
}

.logout-btn:hover {
    background-color: var(--red);
}


@media (max-width: 600px) {
  .nav-btn {
    padding: 0.3rem 0.8rem;
    font-size: 0.85rem;
  }
}

